Updated ResNet-18 for binary classification
Updated ResNet-18 for binary classification

--- a/EmoNet4-classes.ipynb
+++ b/EmoNet4-classes.ipynb
@@ -638,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -658,7 +658,21 @@
             "Accuracy: 0.66\n",
             "Precision: 0.67\n",
             "Recall: 0.66\n",
-            "F1 Score: 0.65\n"
+            "F1 Score: 0.65\n",
+            "\n",
+            "Classification Report:\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "       happy       0.68      0.79      0.73       250\n",
+            "         sad       0.53      0.68      0.60       250\n",
+            "    surprise       0.83      0.74      0.78       250\n",
+            "       angry       0.62      0.41      0.50       250\n",
+            "\n",
+            "    accuracy                           0.66      1000\n",
+            "   macro avg       0.67      0.66      0.65      1000\n",
+            "weighted avg       0.67      0.66      0.65      1000\n",
+            "\n"
           ]
         }
       ],
@@ -666,37 +680,66 @@
         "from sklearn.metrics import classification_report\n",
         "\n",
         "# Compute the confusion matrix\n",
+        "\n",
         "cm = confusion_matrix(y_true, y_pred)\n",
+        "\n",
         "\n",
         "\n",
         "# Calculate accuracy, precision, recall, and F1 score for multi-class\n",
         "accuracy = accuracy_score(y_true, y_pred)\n",
+        "\n",
         "precision = precision_score(y_true, y_pred, average=\"macro\")\n",
+        "\n",
         "recall = recall_score(y_true, y_pred, average=\"macro\")\n",
+        "\n",
         "f1 = f1_score(y_true, y_pred, average=\"macro\")\n",
         "\n",
+        "\n",
         "# Plotting the confusion matrix\n",
+        "\n",
         "plt.figure(figsize=(8, 6))\n",
+        "\n",
         "sns.heatmap(\n",
         "    cm,\n",
+        "\n",
         "    annot=True,\n",
         "    fmt=\"d\",\n",
+        "\n",
         "    cmap=\"Blues\",\n",
+        "\n",
         "    xticklabels=[\"happy\", \"sad\", \"surprise\", \"angry\"],\n",
+        "\n",
         "    yticklabels=[\"happy\", \"sad\", \"surprise\", \"angry\"],\n",
         ")\n",
         "\n",
+        "\n",
         "plt.title(\"Confusion Matrix\")\n",
+        "\n",
         "plt.ylabel(\"Actual Label\")\n",
+        "\n",
         "plt.xlabel(\"Predicted Label\")\n",
+        "\n",
         "plt.show()\n",
+        "\n",
         "\n",
         "# Print the evaluation metrics\n",
         "\n",
+        "\n",
         "print(f\"Accuracy: {accuracy:.2f}\")\n",
+        "\n",
         "print(f\"Precision: {precision:.2f}\")\n",
+        "\n",
         "print(f\"Recall: {recall:.2f}\")\n",
-        "print(f\"F1 Score: {f1:.2f}\")"
+        "\n",
+        "print(f\"F1 Score: {f1:.2f}\")\n",
+        "\n",
+        "# Detailed classification report\n",
+        "print(\"\\nClassification Report:\\n\")\n",
+        "print(\n",
+        "    classification_report(\n",
+        "        y_true, y_pred, target_names=[\"happy\", \"sad\", \"surprise\", \"angry\"]\n",
+        "    )\n",
+        ")"
       ]
     }
   ],
