Updated Data preparation
Updated Data preparation

--- a/Data_Preparation.ipynb
+++ b/Data_Preparation.ipynb
@@ -17,7 +17,7 @@
     "import random\n",
     "import shutil\n",
     "\n",
-    "# Set your dataset directory\n",
+    "# Setting dataset directory\n",
     "base_dir = \"dataset/train\"\n",
     "\n",
     "# The target number of files per class\n",
@@ -27,27 +27,27 @@
     "for class_dir in os.listdir(base_dir):\n",
     "    class_path = os.path.join(base_dir, class_dir)\n",
     "\n",
-    "    # Check if it's a directory\n",
+    "    # Checking if it's a directory\n",
     "    if os.path.isdir(class_path):\n",
     "        # Get all file names\n",
     "        files = os.listdir(class_path)\n",
     "\n",
-    "        # Shuffle the list in place and truncate files to the target count\n",
+    "        # Shuffling the list in place and truncate files to the target count\n",
     "        random.shuffle(files)\n",
     "        files_to_keep = files[:target_file_count]\n",
     "\n",
-    "        # Move the files to keep to a temporary directory\n",
+    "        # Moving the files to keep to a temporary directory\n",
     "        temp_dir = os.path.join(base_dir, \"temp_\" + class_dir)\n",
     "        os.makedirs(temp_dir, exist_ok=True)\n",
     "\n",
-    "        # Move files to keep into the temporary directory\n",
+    "        # Moving files to keep into the temporary directory\n",
     "        for f in files_to_keep:\n",
     "            shutil.move(os.path.join(class_path, f), os.path.join(temp_dir, f))\n",
     "\n",
-    "        # Remove the original directory\n",
+    "        # Removing the original directory\n",
     "        shutil.rmtree(class_path)\n",
     "\n",
-    "        # Rename the temporary directory back to the original directory name\n",
+    "        # Renaming the temporary directory back to the original directory name\n",
     "        os.rename(temp_dir, class_path)\n",
     "\n",
     "print(\"Truncation complete. Each class now has a maximum of 1000 files.\")"
@@ -79,10 +79,10 @@
     "    \"sad\",\n",
     "    \"angry\",\n",
     "    \"surprise\",\n",
-    "]  # Add or modify according to your dataset\n",
+    "]  \n",
     "\n",
-    "# Desired splits: 70% for training, 15% for validation, 15% for testing\n",
-    "train_split = 0.70\n",
+    "# Desired splits: 85% for training, 15% for validation\n",
+    "train_split = 0.85\n",
     "validation_split = 0.15\n",
     "\n",
     "# Create validation directory\n",
@@ -90,16 +90,16 @@
     "os.makedirs(validation_dir, exist_ok=True)\n",
     "\n",
     "for label in class_labels:\n",
-    "    # Create subdirectories for each class label in validation directory\n",
+    "    # Creating subdirectories for each class label in validation directory\n",
     "    os.makedirs(os.path.join(validation_dir, label), exist_ok=True)\n",
     "\n",
     "    # Source directory (train)\n",
     "    source_dir = os.path.join(base_dir, \"train\", label)\n",
     "\n",
-    "    # Get all file names in the source directory\n",
+    "    # Getting all file names in the source directory\n",
     "    files = os.listdir(source_dir)\n",
     "\n",
-    "    # Calculate the number of files for validation\n",
+    "    # Calculating the number of files for validation\n",
     "    validation_count = int(len(files) * validation_split)\n",
     "\n",
     "    # Randomly pick files for validation\n",
@@ -131,7 +131,7 @@
     "import os\n",
     "import random\n",
     "\n",
-    "# Set your dataset directory for the test set\n",
+    "# dataset directory for the test set\n",
     "test_dir = \"dataset/test\"\n",
     "\n",
     "# The target number of files per class for the test set\n",
@@ -141,7 +141,7 @@
     "for class_dir in os.listdir(test_dir):\n",
     "    class_path = os.path.join(test_dir, class_dir)\n",
     "\n",
-    "    # Check if it's a directory\n",
+    "    # Checking if it's a directory\n",
     "    if os.path.isdir(class_path):\n",
     "        # Get all file names\n",
     "        files = os.listdir(class_path)\n",
